style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');

header{
  background-color: rgb(255,208,50);
}

#title{
    width: 50%;
    padding:20px;
    padding-top:35px;
}

h1{
    font-style: italic;
    color:  #ffffff;
}

img{
    width: 100%;
}

canvas{
    width: 100%;
}

.generate{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100px;
  }

  .generate button{
    padding: 10px 25px;
    font-size: 20px;
    font-weight: 500;
    border: 3px solid rgb(255,129,49);;
    outline: none;
    background: rgb(255,129,49);
    color: black;
    border-radius: 5px;
    cursor: pointer;
    margin:10px;
  }

  .generate button:hover{
    background:white;
  }

  .generate label{
    padding: 10px 25px;
    font-size: 20px;
    font-weight: 500;
    border: 3px solid rgb(255,129,49);
    outline: none;
    background: rgb(255,129,49);
    color: black;
    border-radius: 5px;
    cursor: pointer;
    margin:10px;
  }

  .generate input{
    padding: 10px 25px;
    font-size: 20px;
    font-weight: 500;
    border: 3px solid rgb(255,129,49);
    outline: none;
    background: white;
    color: black;
    border-radius: 5px;
    cursor: pointer;
    margin: 10px;
    margin-right:100px;
  }






*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
}

body{
    background: white;
}

.box{
    display: flex;
    align-items: center;
    justify-content: center;
    /*min-height: 100vh;*/
    background:white;
    /*#5256ad;*/
    padding-top: 50px;
  }
  
.drag-area{
  border: 5px dashed rgb(255,129,49);
  height: 500px;
  width: 700px;
  border-radius: 5px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}
.drag-area.active{
  border: 3px solid rgb(255,129,49);;
}
.drag-area .icon{
  font-size: 100px;
  color: rgb(255,129,49);
}
.drag-area header{
  font-size: 30px;
  font-weight: 500;
  background-color:white;
  color: black;
}
.drag-area span{
  font-size: 25px;
  font-weight: 500;
  color: black;
  margin: 10px 0 15px 0;
}
.drag-area button{
  padding: 10px 25px;
  font-size: 20px;
  font-weight: 500;
  border: 3px solid rgb(255,129,49);;
  outline: none;
  background: rgb(255,129,49);
  color: black;
  border-radius: 5px;
  cursor: pointer;
}

.drag-area button:hover{
  background:white;
}

#download-icon{
  width:20%;
  height:25%;
}

.drag-area img{
  height: 100%;
  width: 100%;
  object-fit: cover;
  border-radius: 5px;
}

.output{
    width: 100%;
    height:50%;
    display: flex;
    padding: 50px;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

/* FOOTER */
footer {
  text-align: left;
  padding: 20px;
  font: size 15px;
  background-color: rgb(32,28,71);
  color: white;
  box-shadow: 0 50vh 0 50vh rgb(32,28,71);
}
a{
  color:white;
}

